# kr-equity-perp-gap-monitor

./: LICENSE  README.md  pyproject.toml
docs/: methodology.md  risk_disclaimer.md
examples/: sample_config.yml  samsung_skhynix_gap_demo.py
src/kr_gap/: align.py  binance.py  cli.py  hyperliquid.py  metrics.py  models.py
tests/: test_align.py  test_metrics.py
